fix(server): more readable boosted badge

--- a/src/styles/server/_general.scss
+++ b/src/styles/server/_general.scss
@@ -3,6 +3,14 @@
   color: var(--black-500);
 }
 
+/** boosted server badge */
+.iconBackgroundTierNone-3M21Zn,
+.iconBackgroundTierOne-1S68CI,
+.iconBackgroundTierThree-2hfNBO,
+.iconBackgroundTierTwo-2XoNXD {
+  color: var(--primary-dark-500) !important;
+}
+
 /*
  * > goal
  */
